      --available-troves with and without the --affinity flag.
    * conary q now displays installed, not by default troves by default,
      but skips missing troves.
    * Fixed an update bug where updating an x86 library on an x86_64 system
      would cause conary to switch other x86_64 components for that library
      to x86 versions.
    * update job output is compressed again

  o Other changes:
    * Mirroring now mirrors trove signature

Changes in 0.95:
  o Client changes:
    * The "conary verify" command now handles non-regular files with
      provides and requires (for example, symlinks to shared libraries
      that provide sonames).
    * The "conary showchangeset" command now takes --recurse and
      --no-recurse arguments.
    * All info-* packages are now updated in their own individual jobs;
      this is required for their dependencies to be reliable.
    * The conary syncchildren command now will install new packages
      when appropriate.

  o Repository changes:
    * Additional logging has been added to the repository server.
      Logging is controlled by the "traceLog" config file variable,
      which takes a logging level and log path as arguments.
    * Conary now detects MySQL Database Locked errors and will retry
      the operation a configurable number of times.  The "deadlockRetry"
      configuration variable controls the number of retries and
      defaults to 5.

  o Build changes:
    * Conary now uses site.py to find all possible correct elements of
      sys.path when generating python provides and requires.  Previously,
      new elements added via .pth files in the package being built would
      be ignored for that package.
    * The PythonSetup() build action now works properly with setup.py
      files that use "from setuptools import..." instead of "import
      setuptools".

  o Other changes:
    * The conarybugz.py script has been restored to functionality by